feat(gis): complete modular map creating with three layers